--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="menu_home">Home</string>
     <string name="menu_gallery">Gallery</string>
     <string name="menu_slideshow">Slideshow</string>
+    <string name="menu_about">About</string>
 
     <string name="input_fields_empty">One or more fields were empty. Please fill them out.</string>
 
@@ -46,5 +47,6 @@
     <string name="user_signed_in_failure">User could not be logged in</string>
     <string name="user_registration_failure">User registration failurere</string>
     <string name="account">Account</string>
+    <string name="about_text">This is an about page, which will be all about what this app is and can do...</string>
 
 </resources>
